@@ -1,7 +1,16 @@
-BulkCreate <- function(questions, annotation, ...) {
+BulkCreate <- function(questions, annotation, verbose = FALSE, ...) {
     HITs <- list()
-    if(length(annotation) != 1)
-        annotation <- rep(annotation[1], length(parameters))
+    if(length(annotation) %in% c(1, length(questions)))
+        annotation <- rep(annotation[1], length(questions))
+    a <- list(...)
+    if(!"hit.type" %in% names(a)) {
+        hittypeargs <- unique(c(names(formals(MTurkR::RegisterHITType)), 
+                                names(formals(MTurkR::request))))
+        hittypeargs <- hittypeargs[hittypeargs != "..."]
+        register <- do.call("RegisterHITType", a[[names(a) %in% hittypeargs]])
+        if(!as.logical(register$Valid))
+            stop("Could not RegisterHITType(), check parameters")
+    }
     for(i in 1:length(questions)) {
         if(inherits(questions[[i]], "ExternalQuestion")) {
             thisq <- questions[[i]]$string
@@ -10,13 +19,17 @@ BulkCreate <- function(questions, annotation, ...) {
         } else {
             thisq <- questions[[i]]
         }
-        # this will be very slow if a HITTypeId isn't specified in `...`; need to fix that
-        HITs[[i]] <- CreateHIT(question = thisq, annotation = annotation[i], ...)
+        if(!"hit.type" %in% names(a)) {
+            HITs[[i]] <- CreateHIT(question = thisq, annotation = annotation[i], 
+                                   hit.type = register$HITTypeId, verbose = verbose, ...)
+        } else {
+            HITs[[i]] <- CreateHIT(question = thisq, annotation = annotation[i], verbose = verbose, ...)
+        }
     }
     return(HITs)
 }
 
-BulkCreateFromTemplate <- function(template, input, type = "HTMLQuestion", annotation, ...) {
+BulkCreateFromTemplate <- function(template, input, annotation, type = "HTMLQuestion", verbose = FALSE, ...) {
     if(type == "HTMLQuestion") {
         if(file.exists(template)) {
             template <- GenerateHTMLQuestion(file = template)$string
@@ -25,18 +38,45 @@ BulkCreateFromTemplate <- function(template, input, type = "HTMLQuestion", annot
         }
     }
     if(length(annotation) != 1)
-        annotation <- rep(annotation[1], length(parameters))
+        annotation <- rep(annotation[1], nrow(input))
     questions <- GenerateHITsFromTemplate(template, input, filenames = NULL, write.files = FALSE)
-    BulkCreate(questions = questions, annotation = annotation[i], ...)
+    BulkCreate(questions = questions, annotation = annotation, verbose = verbose, ...)
 }
 
-BulkCreateFromHITLayout <- function(hitlayoutid, parameters, annotation, ...) {
-    HITs <- list()
-    p <- lapply(parameters, function(x) GenerateHITLayoutParameter(values = x))
+BulkCreateFromURLs <- function(url, frame.height, annotation, type = "HTMLQuestion", verbose = FALSE, ...) {
     if(length(annotation) != 1)
-        annotation <- rep(annotation[1], length(parameters))
-    for(i in 1:length(p)) {
-        HITs[[i]] <- CreateHIT(hitlayoutid = hitlayoutid, hitlayoutparameters = p[[i]], annotation = annotation[i], ...)
+        annotation <- rep(annotation[1], nrow(input))
+    questions <- lapply(url, GenerateExternalQuestion, frame.height = frame.height)
+    BulkCreate(questions = questions, annotation = annotation, verbose = verbose, ...)
+}
+
+
+BulkCreateFromHITLayout <- function(hitlayoutid, input, annotation, verbose = FALSE, ...) {
+    HITs <- list()
+    if(length(annotation) != 1)
+        annotation <- rep(annotation[1], nrow(input))
+    a <- list(...)
+    if(!"hit.type" %in% names(a)) {
+        hittypeargs <- unique(c(names(formals(MTurkR::RegisterHITType)), 
+                                names(formals(MTurkR::request))))
+        hittypeargs <- hittypeargs[hittypeargs != "..."]
+        register <- do.call("RegisterHITType", a[[names(a) %in% hittypeargs]])
+        if(!as.logical(register$Valid)) 
+            stop("Could not RegisterHITType(), check parameters")
+    }
+    for(i in 1:nrow(input)) {
+        if(!"hit.type" %in% names(a)) {
+            HITs[[i]] <- CreateHIT(hitlayoutid = hitlayoutid, 
+                               hitlayoutparameters = 
+                                 GenerateHITLayoutParameter(values = unlist(input[i,,drop=TRUE])), 
+                               annotation = annotation[i], 
+                               hit.type = register$HITTypeId, verbose = verbose, ...)
+        } else {
+            HITs[[i]] <- CreateHIT(hitlayoutid = hitlayoutid, 
+                               hitlayoutparameters = 
+                                 GenerateHITLayoutParameter(values = unlist(input[i,,drop=TRUE])), 
+                               annotation = annotation[i], verbose = verbose, ...)
+        }
     }
     return(HITs)
 }
